--- a/MM1.html
+++ b/MM1.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="MM1.css
+">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+  <h1>welcome to the hood 
+  </h1>
   <nav>
     <ul>
-        <li>home</li>
-        <li>About me</li>
-        <li>work experience</li>
-        <li>resume</li>
-        <li>contact</li>
+        <li><a href="https://www.w3schools.com/html/html_links.asp"><button>home</button></a></li>
+        <li>About me</li><button>about me</button><a href="http://" target="_blank" rel="noopener noreferrer"></a>
+        <li>work experience</li><button>my work</button><a href="http://"></a>
+        <li>resume</li><button>my resume</button><a href="http://"></a>
+        <li>contact</li><button>my contact</button><a href="http://"></a>
     </ul>
   </nav>
   <section id="home">
@@ -58,3 +62,8 @@
    
 </body>
 </html>
+<div class="card"><h1>always become 1st in class </h6><p>my parents are proud of me because i made an effort to get first in the class
+
+</p><img src="./téléchargement.jpg" alt=""></div>
+<div class="card"><h6>celebrate</h6><p>
+</p></div>
